hphp/test/slow/php7_backported/scalar-types/scalar_reserved3.php.expectf

Fatal error: Cannot use `float` as class name as it is reserved in %s/scalar_reserved3.php on line 3
